Close #119: He puesto la regeneración en Principal/Detalles

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -204,6 +204,7 @@
   "anima.ui.general.regeneration.period.h.title": " per hour",
   "anima.ui.general.regeneration.period.m.title": " per minute",
   "anima.ui.general.regeneration.period.a.title": " por round",
+  "anima.ui.general.regeneration.special.title": "Special",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
   "anima.ui.general.regeneration.special.10.title": "As above, but in one day",
@@ -225,6 +226,7 @@
   "anima.ui.general.regeneration.special.7.title": "Cleanly amputated limbs recover if they are attached to the stump for one week.",
   "anima.ui.general.regeneration.special.8.title": "As above, but in five days",
   "anima.ui.general.regeneration.special.9.title": "As above, but in three days. The character automatically overcomes the state between life and death.",
+  "anima.ui.general.regeneration.title": "Regeneration",
   "anima.ui.general.tabs.first": "Character",
   "anima.ui.general.tabs.second": "Details",
   "anima.ui.general.tabs.third": "Inventory",
