--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -204,6 +204,7 @@
   "anima.ui.general.regeneration.period.h.title": " por hora",
   "anima.ui.general.regeneration.period.m.title": " por minuto",
   "anima.ui.general.regeneration.period.a.title": " por asalto",
+  "anima.ui.general.regeneration.special.title": "Especial",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
   "anima.ui.general.regeneration.special.10.title": "Como el anterior, pero en un día",
@@ -225,6 +226,7 @@
   "anima.ui.general.regeneration.special.7.title": "Los miembros limpiamente amputados se recuperan si se unen al muñón durante una semana",
   "anima.ui.general.regeneration.special.8.title": "Como el anterior, pero en cinco días",
   "anima.ui.general.regeneration.special.9.title": "Como el anterior, pero en tres días. El personaje supera automÃ¡ticamente el estado entre la vida y la muerte",
+  "anima.ui.general.regeneration.title": "Regeneración",
   "anima.ui.general.tabs.first": "Personaje",
   "anima.ui.general.tabs.second": "Detalles",
   "anima.ui.general.tabs.third": "Inventario",
