--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -204,6 +204,7 @@
   "anima.ui.general.regeneration.period.h.title": " par heure",
   "anima.ui.general.regeneration.period.m.title": " par minute",
   "anima.ui.general.regeneration.period.a.title": " par round",
+  "anima.ui.general.regeneration.special.title": "Spécial",
   "anima.ui.general.regeneration.special.0.title": "",
   "anima.ui.general.regeneration.special.1.title": "",
   "anima.ui.general.regeneration.special.10.title": "Comme ci-dessus, mais en un seul jour",
@@ -225,6 +226,7 @@
   "anima.ui.general.regeneration.special.7.title": "Les membres amputés proprement récupèrent s'ils sont attachés à la souche pendant une semaine.",
   "anima.ui.general.regeneration.special.8.title": "Comme la précédente, mais en cinq jours",
   "anima.ui.general.regeneration.special.9.title": "Comme la précédente, mais en trois jours. Le personnage surmonte automatiquement l'état entre la vie et la mort.",
+  "anima.ui.general.regeneration.title": "Régénération",
   "anima.ui.general.tabs.first": "Personnage",
   "anima.ui.general.tabs.second": "Détails",
   "anima.ui.general.tabs.third": "Inventaire",
