#34: Agregar Strings para las habilidades de ki

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -152,6 +152,65 @@
   "anima.ui.domine.kiAccumulation.title": "Accu. Ki",
   "anima.ui.domine.kiAccumulation.willPower.title": "Wil",
   "anima.ui.domine.kiSkills.title": "Ki Skills",
+  "anima.ui.domine.kiSkills.ageControl.title": "Age control",
+  "anima.ui.domine.kiSkills.arcaneArmor.title": "Arcane armor",
+  "anima.ui.domine.kiSkills.arcaneMagnitude.title": "Arcane magnitude",
+  "anima.ui.domine.kiSkills.arcaneMultiplication.title": "Arcane mult",
+  "anima.ui.domine.kiSkills.auraExtension.title": "Aura extension",
+  "anima.ui.domine.kiSkills.bodyMultiplication.title": "Body multiplication",
+  "anima.ui.domine.kiSkills.characteristicIncrease.title": "Increase of characteristics",
+  "anima.ui.domine.kiSkills.coldImmunity.title": "Immunity element FRI",
+  "anima.ui.domine.kiSkills.combatAura.title": "Combat Aura",
+  "anima.ui.domine.kiSkills.electricImmunity.title": "Immunity element ELE",
+  "anima.ui.domine.kiSkills.elementalAttackAir.title": "Elemental attack Air",
+  "anima.ui.domine.kiSkills.elementalAttackDark.title": "Elemental attack Darkness",
+  "anima.ui.domine.kiSkills.elementalAttackEarth.title": "Elemental attack Earth",
+  "anima.ui.domine.kiSkills.elementalAttackFire.title": "Elemental attack Fire",
+  "anima.ui.domine.kiSkills.elementalAttackLight.title": "Elemental attack Light",
+  "anima.ui.domine.kiSkills.elementalAttackWater.title": "Elemental attack Water",
+  "anima.ui.domine.kiSkills.energyAbsorption.title": "Energy absorption",
+  "anima.ui.domine.kiSkills.energyArmor.title": "Energy armor",
+  "anima.ui.domine.kiSkills.erudition.title": "Erudition",
+  "anima.ui.domine.kiSkills.fakeDeath.title": "False death",
+  "anima.ui.domine.kiSkills.fireImmunity.title": "Immunity element FUE",
+  "anima.ui.domine.kiSkills.flight.title": "Flight",
+  "anima.ui.domine.kiSkills.forceTechniques.title": "Force techniques",
+  "anima.ui.domine.kiSkills.hidingAura.title": "Aura of concealment",
+  "anima.ui.domine.kiSkills.improvisedTechniques.title": "Improvised combat techniques",
+  "anima.ui.domine.kiSkills.increasedDamage.title": "Increased damage",
+  "anima.ui.domine.kiSkills.increasedReach.title": "Increased range",
+  "anima.ui.domine.kiSkills.increasedSpeed.title": "Increased speed",
+  "anima.ui.domine.kiSkills.inhumanity.title": "Inhumanity",
+  "anima.ui.domine.kiSkills.kiControl.title": "Ki Control",
+  "anima.ui.domine.kiSkills.kiDestruction.title": "Ki destruction",
+  "anima.ui.domine.kiSkills.kiDetection.title": "Ki Detection",
+  "anima.ui.domine.kiSkills.kiHealing.title": "Ki healing",
+  "anima.ui.domine.kiSkills.kiHiding.title": "Ki concealment",
+  "anima.ui.domine.kiSkills.kiTransmision.title": "Ki transmission",
+  "anima.ui.domine.kiSkills.kiUse.title": "Use of Ki",
+  "anima.ui.domine.kiSkills.levitation.title": "Levitation",
+  "anima.ui.domine.kiSkills.magnitude.title": "Magnitude",
+  "anima.ui.domine.kiSkills.majorArmor.title": "Major armor",
+  "anima.ui.domine.kiSkills.majorMultiplication.title": "",
+  "anima.ui.domine.kiSkills.massMovement.title": "Mass movement",
+  "anima.ui.domine.kiSkills.needElimination.title": "Elimination of needs",
+  "anima.ui.domine.kiSkills.objectMovement.title": "Movement of objects",
+  "anima.ui.domine.kiSkills.penaltyElimination.title": "Elimination of penalties",
+  "anima.ui.domine.kiSkills.physicalChange.title": "Physical change",
+  "anima.ui.domine.kiSkills.physicalControl.title": "Physical control",
+  "anima.ui.domine.kiSkills.physicalShield.title": "Physical shield",
+  "anima.ui.domine.kiSkills.presenceExtrusion.title": "Extrusion of presence",
+  "anima.ui.domine.kiSkills.recoverOthers.title": "Restoration to others",
+  "anima.ui.domine.kiSkills.recovery.title": "Recovery",
+  "anima.ui.domine.kiSkills.sacrifice.title": "Vital sacrifice",
+  "anima.ui.domine.kiSkills.stabilize.title": "Stabilize",
+  "anima.ui.domine.kiSkills.superiorChange.title": "Superior shift",
+  "anima.ui.domine.kiSkills.superiorHealing.title": "Superior healing",
+  "anima.ui.domine.kiSkills.superiorIncrease.title": "Superior increase",
+  "anima.ui.domine.kiSkills.techniqueImitation.title": "Technique imitation",
+  "anima.ui.domine.kiSkills.useNecessaryEnergy.title": "Use of necessary energy",
+  "anima.ui.domine.kiSkills.weightRemoval.title": "Weight removal",
+  "anima.ui.domine.kiSkills.zen.title": "Zen",
   "anima.ui.domine.martialArts.grade.title": "Grade",
   "anima.ui.domine.martialArts.name.title": "Name",
   "anima.ui.domine.martialArts.title": "Martial Arts",
