--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -152,6 +152,65 @@
   "anima.ui.domine.kiAccumulation.title": "Ki acu.",
   "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
   "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
+  "anima.ui.domine.kiSkills.ageControl.title": "Control de la edad",
+  "anima.ui.domine.kiSkills.arcaneArmor.title": "Arm arcana",
+  "anima.ui.domine.kiSkills.arcaneMagnitude.title": " Mag arcana",
+  "anima.ui.domine.kiSkills.arcaneMultiplication.title": " Mult arcana",
+  "anima.ui.domine.kiSkills.auraExtension.title": "Extensión del aura al arma",
+  "anima.ui.domine.kiSkills.bodyMultiplication.title": "Mult de cuerpos",
+  "anima.ui.domine.kiSkills.characteristicIncrease.title": "Aumento de características",
+  "anima.ui.domine.kiSkills.coldImmunity.title": "Inmunidad elem FRI",
+  "anima.ui.domine.kiSkills.combatAura.title": "Aura de combate",
+  "anima.ui.domine.kiSkills.electricImmunity.title": "Inmunidad elem ELE",
+  "anima.ui.domine.kiSkills.elementalAttackAir.title": "Ataque elemental (Aire)",
+  "anima.ui.domine.kiSkills.elementalAttackDark.title": "Ataque elemental (Oscuridad)",
+  "anima.ui.domine.kiSkills.elementalAttackEarth.title": "Ataque elemental (Tierra)",
+  "anima.ui.domine.kiSkills.elementalAttackFire.title": "Ataque elemental (Fuego)",
+  "anima.ui.domine.kiSkills.elementalAttackLight.title": "Ataque elemental (Luz)",
+  "anima.ui.domine.kiSkills.elementalAttackWater.title": "Ataque elemental (Agua)",
+  "anima.ui.domine.kiSkills.energyAbsorption.title": "Absorción de energía",
+  "anima.ui.domine.kiSkills.energyArmor.title": "Armadura de energía",
+  "anima.ui.domine.kiSkills.erudition.title": "Erudición",
+  "anima.ui.domine.kiSkills.fakeDeath.title": "Falsa muerte",
+  "anima.ui.domine.kiSkills.fireImmunity.title": "Inmunidad elem FUE",
+  "anima.ui.domine.kiSkills.flight.title": "Vuelo",
+  "anima.ui.domine.kiSkills.forceTechniques.title": "Forzar técnicas",
+  "anima.ui.domine.kiSkills.hidingAura.title": "Aura de ocultación",
+  "anima.ui.domine.kiSkills.improvisedTechniques.title": "Técnicas de combate improvisadas",
+  "anima.ui.domine.kiSkills.increasedDamage.title": "Daño incrementado",
+  "anima.ui.domine.kiSkills.increasedReach.title": "Alcance incrementado",
+  "anima.ui.domine.kiSkills.increasedSpeed.title": "Velocidad incrementada",
+  "anima.ui.domine.kiSkills.inhumanity.title": "Inhumanidad",
+  "anima.ui.domine.kiSkills.kiControl.title": "Control del Ki",
+  "anima.ui.domine.kiSkills.kiDestruction.title": "Destrucción por Ki",
+  "anima.ui.domine.kiSkills.kiDetection.title": "Detección del Ki",
+  "anima.ui.domine.kiSkills.kiHealing.title": "Curación por Ki",
+  "anima.ui.domine.kiSkills.kiHiding.title": "Ocultación del Ki",
+  "anima.ui.domine.kiSkills.kiTransmision.title": "Transmisión del Ki",
+  "anima.ui.domine.kiSkills.kiUse.title": "Uso del Ki",
+  "anima.ui.domine.kiSkills.levitation.title": "Levitación",
+  "anima.ui.domine.kiSkills.magnitude.title": "Magnitud",
+  "anima.ui.domine.kiSkills.majorArmor.title": "Armadura mayor",
+  "anima.ui.domine.kiSkills.majorMultiplication.title": "Mult mayor",
+  "anima.ui.domine.kiSkills.massMovement.title": "Mov de masas",
+  "anima.ui.domine.kiSkills.needElimination.title": "Eliminación de necesidades",
+  "anima.ui.domine.kiSkills.objectMovement.title": "Movimiento de objetos",
+  "anima.ui.domine.kiSkills.penaltyElimination.title": "Eliminación de penalizadores",
+  "anima.ui.domine.kiSkills.physicalChange.title": "Cambio físico",
+  "anima.ui.domine.kiSkills.physicalControl.title": "Dominio físico",
+  "anima.ui.domine.kiSkills.physicalShield.title": "Escudo físico",
+  "anima.ui.domine.kiSkills.presenceExtrusion.title": "Extrusión de presencia",
+  "anima.ui.domine.kiSkills.recoverOthers.title": "Restituir a otros",
+  "anima.ui.domine.kiSkills.recovery.title": "Recuperación",
+  "anima.ui.domine.kiSkills.sacrifice.title": "Sacrificio vital",
+  "anima.ui.domine.kiSkills.stabilize.title": "Estabilizar",
+  "anima.ui.domine.kiSkills.superiorChange.title": "Cambio superior",
+  "anima.ui.domine.kiSkills.superiorHealing.title": "Curación superior",
+  "anima.ui.domine.kiSkills.superiorIncrease.title": "Incremento superior",
+  "anima.ui.domine.kiSkills.techniqueImitation.title": "Imitación de técnicas",
+  "anima.ui.domine.kiSkills.useNecessaryEnergy.title": "Uso de la energía necesaria",
+  "anima.ui.domine.kiSkills.weightRemoval.title": "Eliminación de peso",
+  "anima.ui.domine.kiSkills.zen.title": "Zen",
   "anima.ui.domine.martialArts.grade.title": "Grado",
   "anima.ui.domine.martialArts.name.title": "Nombre",
   "anima.ui.domine.martialArts.title": "Artes Marciales",
