--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -152,6 +152,65 @@
   "anima.ui.domine.kiAccumulation.title": "Accu. Ki",
   "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
   "anima.ui.domine.kiSkills.title": "Pouvoirs de Ki",
+  "anima.ui.domine.kiSkills.ageControl.title": "Contrôle de l'âge ",
+  "anima.ui.domine.kiSkills.arcaneArmor.title": "Armure arcanique",
+  "anima.ui.domine.kiSkills.arcaneMagnitude.title": "Arcane mag.",
+  "anima.ui.domine.kiSkills.arcaneMultiplication.title": "Arcane mult.",
+  "anima.ui.domine.kiSkills.auraExtension.title": "Extension de l'Aura à l'arme",
+  "anima.ui.domine.kiSkills.bodyMultiplication.title": "Mult. de corps",
+  "anima.ui.domine.kiSkills.characteristicIncrease.title": "Augmentation des caractéristiques",
+  "anima.ui.domine.kiSkills.coldImmunity.title": "Elément d'immunité. FRI ",
+  "anima.ui.domine.kiSkills.combatAura.title": "Aura de combat",
+  "anima.ui.domine.kiSkills.electricImmunity.title": "Elément d'immunité. ELE ",
+  "anima.ui.domine.kiSkills.elementalAttackAir.title": "Attaque élémentaire Air",
+  "anima.ui.domine.kiSkills.elementalAttackDark.title": "Attaque élémentaire Darkness",
+  "anima.ui.domine.kiSkills.elementalAttackEarth.title": "Attaque élémentaire Terre",
+  "anima.ui.domine.kiSkills.elementalAttackFire.title": "Attaque élémentaire Feu",
+  "anima.ui.domine.kiSkills.elementalAttackLight.title": "Attaque élémentaire Lumière",
+  "anima.ui.domine.kiSkills.elementalAttackWater.title": "Attaque élémentaire Eau",
+  "anima.ui.domine.kiSkills.energyAbsorption.title": "Absorption d'énergie",
+  "anima.ui.domine.kiSkills.energyArmor.title": "Armure énergétique",
+  "anima.ui.domine.kiSkills.erudition.title": "Erudition",
+  "anima.ui.domine.kiSkills.fakeDeath.title": "Fausse mort",
+  "anima.ui.domine.kiSkills.fireImmunity.title": "Elément d'immunité. FUE",
+  "anima.ui.domine.kiSkills.flight.title": "Vol ",
+  "anima.ui.domine.kiSkills.forceTechniques.title": "Techniques de forçage ",
+  "anima.ui.domine.kiSkills.hidingAura.title": "Aura de dissimulation ",
+  "anima.ui.domine.kiSkills.improvisedTechniques.title": "Techniques de combat improvisées",
+  "anima.ui.domine.kiSkills.increasedDamage.title": "Augmentation des dégâts",
+  "anima.ui.domine.kiSkills.increasedReach.title": "Augmentation de la gamme Augmentation de la gamme",
+  "anima.ui.domine.kiSkills.increasedSpeed.title": "Vitesse accrue",
+  "anima.ui.domine.kiSkills.inhumanity.title": "Inhumanité ",
+  "anima.ui.domine.kiSkills.kiControl.title": "Contrôle du ki",
+  "anima.ui.domine.kiSkills.kiDestruction.title": "Ki destruction ",
+  "anima.ui.domine.kiSkills.kiDetection.title": "Détection du ki ",
+  "anima.ui.domine.kiSkills.kiHealing.title": "Ki healing ",
+  "anima.ui.domine.kiSkills.kiHiding.title": "dissimulation du ki ",
+  "anima.ui.domine.kiSkills.kiTransmision.title": "Transmission du ki ",
+  "anima.ui.domine.kiSkills.kiUse.title": "Utilisation de Ki",
+  "anima.ui.domine.kiSkills.levitation.title": "Lévitation ",
+  "anima.ui.domine.kiSkills.magnitude.title": "Magnitude",
+  "anima.ui.domine.kiSkills.majorArmor.title": "Armure majeure",
+  "anima.ui.domine.kiSkills.majorMultiplication.title": "Mult. d'organismes ",
+  "anima.ui.domine.kiSkills.massMovement.title": "Mouvement de masse",
+  "anima.ui.domine.kiSkills.needElimination.title": "Ã‰limination des besoins ",
+  "anima.ui.domine.kiSkills.objectMovement.title": "Mouvement des objets",
+  "anima.ui.domine.kiSkills.penaltyElimination.title": "Suppression des sanctions ",
+  "anima.ui.domine.kiSkills.physicalChange.title": "Changement physique ",
+  "anima.ui.domine.kiSkills.physicalControl.title": "MaÃ®trise physique ",
+  "anima.ui.domine.kiSkills.physicalShield.title": "Bouclier physique ",
+  "anima.ui.domine.kiSkills.presenceExtrusion.title": "Extrusion de la présence",
+  "anima.ui.domine.kiSkills.recoverOthers.title": "Rendre aux autres",
+  "anima.ui.domine.kiSkills.recovery.title": "Récupération",
+  "anima.ui.domine.kiSkills.sacrifice.title": "Sacrifice de la vie",
+  "anima.ui.domine.kiSkills.stabilize.title": "Stabiliser ",
+  "anima.ui.domine.kiSkills.superiorChange.title": "Superior Shift",
+  "anima.ui.domine.kiSkills.superiorHealing.title": "Guérison supérieure",
+  "anima.ui.domine.kiSkills.superiorIncrease.title": "Amélioration supérieure ",
+  "anima.ui.domine.kiSkills.techniqueImitation.title": "Imitation de techniques ",
+  "anima.ui.domine.kiSkills.useNecessaryEnergy.title": "Utilisation de l'énergie nécessaire",
+  "anima.ui.domine.kiSkills.weightRemoval.title": "Suppression du poids",
+  "anima.ui.domine.kiSkills.zen.title": "Zen",
   "anima.ui.domine.martialArts.grade.title": "Grade",
   "anima.ui.domine.martialArts.name.title": "Nom",
   "anima.ui.domine.martialArts.title": "Arts Martiaux",
