--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -217,6 +217,27 @@
   "anima.ui.domine.martialKnowledge.mk.title": "MK",
   "anima.ui.domine.martialKnowledge.title": "Martial Knowledge",
   "anima.ui.domine.nemesisSkills.title": "Nemesis Skills",
+  "anima.ui.domine.nemesisSkills.bondNull.title": "Bond Nullification",
+  "anima.ui.domine.nemesisSkills.indetection.title": "Undetectability",
+  "anima.ui.domine.nemesisSkills.inhumanity.title": "Inhumanity",
+  "anima.ui.domine.nemesisSkills.kiNull.title": "Ki Nullification",
+  "anima.ui.domine.nemesisSkills.magicNull.title": "Magic Nullification",
+  "anima.ui.domine.nemesisSkills.majKiNull.title": "Major Ki Nullification",
+  "anima.ui.domine.nemesisSkills.majMagicNull.title": "Major Magic Nullification",
+  "anima.ui.domine.nemesisSkills.majorMatrixNull.title": "Major Matrix Nullification",
+  "anima.ui.domine.nemesisSkills.matrixNull.title": "Matrix Nullification",
+  "anima.ui.domine.nemesisSkills.nemesisControl.title": "Use of Nemesis",
+  "anima.ui.domine.nemesisSkills.noht.title": "Noht",
+  "anima.ui.domine.nemesisSkills.oneWithNothing.title": "One with nothingness",
+  "anima.ui.domine.nemesisSkills.voidArmor.title": "Void Armor",
+  "anima.ui.domine.nemesisSkills.voidAura.title": "Void Aura",
+  "anima.ui.domine.nemesisSkills.voidBody.title": "Void Body",
+  "anima.ui.domine.nemesisSkills.voidEssence.title": "Void Essence",
+  "anima.ui.domine.nemesisSkills.voidExtrusion.title": "Void Extrusion",
+  "anima.ui.domine.nemesisSkills.voidForm.title": "Void Form",
+  "anima.ui.domine.nemesisSkills.voidMovement.title": "Void Movement",
+  "anima.ui.domine.nemesisSkills.withoutNeeds.title": "Without requirements",
+  "anima.ui.domine.nemesisSkills.zen.title": "Zen",
   "anima.ui.domine.seals.earth.title": "Earth",
   "anima.ui.domine.seals.major.title": "Major",
   "anima.ui.domine.seals.metal.title": "Metal",
