--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -217,6 +217,27 @@
   "anima.ui.domine.martialKnowledge.mk.title": "CM",
   "anima.ui.domine.martialKnowledge.title": "Conocimiento Marcial",
   "anima.ui.domine.nemesisSkills.title": "Habilidades de Némesis",
+  "anima.ui.domine.nemesisSkills.bondNull.title": "Anulación de Lazos",
+  "anima.ui.domine.nemesisSkills.indetection.title": "Indetección",
+  "anima.ui.domine.nemesisSkills.inhumanity.title": "Inhumanidad",
+  "anima.ui.domine.nemesisSkills.kiNull.title": "Anulación de Ki",
+  "anima.ui.domine.nemesisSkills.magicNull.title": "Anulación de Magia",
+  "anima.ui.domine.nemesisSkills.majKiNull.title": "Anulación de Ki mayor",
+  "anima.ui.domine.nemesisSkills.majMagicNull.title": "Anulación de Magia mayor",
+  "anima.ui.domine.nemesisSkills.majorMatrixNull.title": "Anulación de Matrices mayor",
+  "anima.ui.domine.nemesisSkills.matrixNull.title": "Anulación de Matrices",
+  "anima.ui.domine.nemesisSkills.nemesisControl.title": "Uso del Némesis",
+  "anima.ui.domine.nemesisSkills.noht.title": "Noht",
+  "anima.ui.domine.nemesisSkills.oneWithNothing.title": "Uno con la nada",
+  "anima.ui.domine.nemesisSkills.voidArmor.title": "Armadura de vacío",
+  "anima.ui.domine.nemesisSkills.voidAura.title": "Aura de Vacío",
+  "anima.ui.domine.nemesisSkills.voidBody.title": "Cuerpo de Vacío",
+  "anima.ui.domine.nemesisSkills.voidEssence.title": "Esencia de Vacío",
+  "anima.ui.domine.nemesisSkills.voidExtrusion.title": "Extrusión de Vacío",
+  "anima.ui.domine.nemesisSkills.voidForm.title": "Forma de Vacío",
+  "anima.ui.domine.nemesisSkills.voidMovement.title": "Movimiento de Vacío",
+  "anima.ui.domine.nemesisSkills.withoutNeeds.title": "Sin necesidades",
+  "anima.ui.domine.nemesisSkills.zen.title": "Zen",
   "anima.ui.domine.seals.earth.title": "Tierra",
   "anima.ui.domine.seals.major.title": "Mayor",
   "anima.ui.domine.seals.metal.title": "Metal",
