--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -217,6 +217,27 @@
   "anima.ui.domine.martialKnowledge.mk.title": "CM",
   "anima.ui.domine.martialKnowledge.title": "Connaissance Martiale",
   "anima.ui.domine.nemesisSkills.title": "Pouvoirs Nemesis",
+  "anima.ui.domine.nemesisSkills.bondNull.title": "Nullification de la boucle",
+  "anima.ui.domine.nemesisSkills.indetection.title": "Non détecté",
+  "anima.ui.domine.nemesisSkills.inhumanity.title": "Inhumanité",
+  "anima.ui.domine.nemesisSkills.kiNull.title": "Ki Nullification",
+  "anima.ui.domine.nemesisSkills.magicNull.title": "Annulation de la magie",
+  "anima.ui.domine.nemesisSkills.majKiNull.title": "Plus grande annulation du Ki",
+  "anima.ui.domine.nemesisSkills.majMagicNull.title": "Nullification magique supérieure",
+  "anima.ui.domine.nemesisSkills.majorMatrixNull.title": "Greater Matrix Nullification",
+  "anima.ui.domine.nemesisSkills.matrixNull.title": "Nullification de la matrice",
+  "anima.ui.domine.nemesisSkills.nemesisControl.title": "Utilisation de la Nemesis",
+  "anima.ui.domine.nemesisSkills.noht.title": "Noht",
+  "anima.ui.domine.nemesisSkills.oneWithNothing.title": "Un avec le néant",
+  "anima.ui.domine.nemesisSkills.voidArmor.title": "Armure du vide",
+  "anima.ui.domine.nemesisSkills.voidAura.title": "Aura du vide",
+  "anima.ui.domine.nemesisSkills.voidBody.title": "Corps de vide",
+  "anima.ui.domine.nemesisSkills.voidEssence.title": "Essence de la vacuité",
+  "anima.ui.domine.nemesisSkills.voidExtrusion.title": "Extrusion du vide",
+  "anima.ui.domine.nemesisSkills.voidForm.title": "Forme du vide",
+  "anima.ui.domine.nemesisSkills.voidMovement.title": "Mouvement du vide",
+  "anima.ui.domine.nemesisSkills.withoutNeeds.title": "Aucune exigence",
+  "anima.ui.domine.nemesisSkills.zen.title": "Zen",
   "anima.ui.domine.seals.earth.title": "Terre",
   "anima.ui.domine.seals.major.title": "Majeur",
   "anima.ui.domine.seals.metal.title": "Métal",
