#37: Añadir proyección psíquica ofensiva (WIP)

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -363,7 +363,14 @@
   "anima.ui.psychic.psychicPowers.power.header.level.title": "Niveau",
   "anima.ui.psychic.psychicPowers.title": "Pouvoirs Psychiques",
   "anima.ui.psychic.psychicProjection.projection.title": "Projection",
-  "anima.ui.psychic.psychicProjection.title": "Projectoin Psychique",
+  "anima.ui.psychic.psychicProjection.title": "Projection Psychique",
+  "anima.ui.psychic.psychicProjection.defensive.rollMessage": "projection psychique défensive",
+  "anima.ui.psychic.psychicProjection.defensive.title": "Défensive",
+  "anima.ui.psychic.psychicProjection.final.rollMessage": "projection psychique",
+  "anima.ui.psychic.psychicProjection.final.title": "Projection",
+  "anima.ui.psychic.psychicProjection.imbalance.title": "Déséquilibré",
+  "anima.ui.psychic.psychicProjection.offensive.rollMessage": "projection psychique offensive",
+  "anima.ui.psychic.psychicProjection.offensive.title": "Offensive",
   "anima.ui.psychic.tabs.main": "Principal",
   "anima.ui.psychic.tabs.secondaries": "Pouvoirs",
   "anima.ui.resistances.disease": "Maladies",
