--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -364,6 +364,13 @@
   "anima.ui.psychic.psychicPowers.title": "Poderes Psíquicos",
   "anima.ui.psychic.psychicProjection.projection.title": "Proyección",
   "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
+  "anima.ui.psychic.psychicProjection.defensive.rollMessage": "proyección psíquica defensiva",
+  "anima.ui.psychic.psychicProjection.defensive.title": "Defensiva",
+  "anima.ui.psychic.psychicProjection.final.rollMessage": "proyección psíquica",
+  "anima.ui.psychic.psychicProjection.final.title": "Proyección",
+  "anima.ui.psychic.psychicProjection.imbalance.title": "Desequilibrio",
+  "anima.ui.psychic.psychicProjection.offensive.rollMessage": "proyección psíquica ofensiva",
+  "anima.ui.psychic.psychicProjection.offensive.title": "Ofensiva",
   "anima.ui.psychic.tabs.main": "Principal",
   "anima.ui.psychic.tabs.secondaries": "Poderes",
   "anima.ui.resistances.disease": "Enfermedades",
