Closes #134: Fixes bug where enormous and giant weapons increas the strength modifiers + added new editable field in combat to give a flat modifier to all weapon's damage. This can be a temporary fix until we fully implement the ki skills tree to simulate Aura extension and Increased Damage

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -74,6 +74,7 @@
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
+  "anima.ui.combat.baseValues.extraDamage.title": "Extra damage",
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.baseValues.wearArmor.title": "Wear armor",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
