add translations and input for ethnicity

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,6 +7,7 @@
   "anima.ui.aspectSection.hair.title": "Hair",
   "anima.ui.aspectSection.height.title": "Height",
   "anima.ui.aspectSection.race.title": "Race",
+  "anima.ui.aspectSection.ethnicity.title": "Ethnicity",
   "anima.ui.aspectSection.size.title": "Size",
   "anima.ui.aspectSection.title": "Aspect",
   "anima.ui.aspectSection.weight.title": "Weight",
