--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -7,6 +7,7 @@
   "anima.ui.aspectSection.hair.title": "Pelo",
   "anima.ui.aspectSection.height.title": "Altura",
   "anima.ui.aspectSection.race.title": "Raza",
+  "anima.ui.aspectSection.ethnicity.title": "Etnia",
   "anima.ui.aspectSection.size.title": "Tamaño",
   "anima.ui.aspectSection.title": "Aspecto",
   "anima.ui.aspectSection.weight.title": "Peso",
