add ethnicity to character

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -7,6 +7,7 @@
   "anima.ui.aspectSection.hair.title": "Cheveux",
   "anima.ui.aspectSection.height.title": "Taille",
   "anima.ui.aspectSection.race.title": "Race",
+  "anima.ui.aspectSection.ethnicity.title": "Ethnie",
   "anima.ui.aspectSection.size.title": "Corpulence",
   "anima.ui.aspectSection.title": "Aspect",
   "anima.ui.aspectSection.weight.title": "Poids",
